--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ YAML로 쓰인 머릿말은 liquid templete을 사용하여 다른 파일에서 
 		</div>
 
 		<div class = "home-sections">
-			{% include section-youtube.html %}
 			{% include section-mentoring.html %}
+			{% include section-articles2.html %}
+			{% include section-youtube.html %}
 			{% include section-articles.html %}
 			{% include section-vine.html %}
 			{% include section-design.html %}
