--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ YAML로 쓰인 머릿말은 liquid templete을 사용하여 다른 파일에서 
 		</div>
 
 		<div class = "home-sections">
-			{% include section-mentoring.html %}
-			{% include section-youtube.html %}
-			{% include section-articles2.html %}
 			{% include section-articles.html %}
-			{% include section-design.html %}
+			{% include section-package.html %}
+			{% include section-editorial.html %}
+			{% include section-youtube.html %}			
+			{% include section-app.html %}
 			{% include section-notes.html %}
 			{% include section-footer.html %}		
 		</div>
