--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@ YAML로 쓰인 머릿말은 liquid templete을 사용하여 다른 파일에서 
 		</div>
 
 		<div class = "home-sections">
-			{% include section-articles.html %}
+			{% include section-poster.html %}
 			{% include section-package.html %}
+			{% include section-articles.html %}
 			{% include section-editorial.html %}
-			{% include section-youtube.html %}			
+			{% include section-youtube.html %}
 			{% include section-app.html %}
 			{% include section-notes.html %}
-			{% include section-footer.html %}		
+			{% include section-footer.html %}
 		</div>
 	
 	</div>	
