--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@ YAML로 쓰인 머릿말은 liquid templete을 사용하여 다른 파일에서 
 			{% include section-about.html %}
 		</div>
 
-		<div class = "home-sections">
+		<div class = "home-sections">			
 			{% include section-poster.html %}
-			{% include section-package.html %}
-			{% include section-articles.html %}
 			{% include section-editorial.html %}
 			{% include section-youtube.html %}
-			{% include section-app.html %}
+			{% include section-package.html %}
+			{% include section-articles.html %}
+			{% include section-app2.html %}
+			{% include section-icon.html %}
 			{% include section-notes.html %}
 			{% include section-footer.html %}
 		</div>
